Small changes in a couple of methods and tests which were failing in Jenkins.